# lumineria_launcher

./: .gitignore  LICENSE  README.md  com.lumineria.Launcher.desktop  com.lumineria.Launcher.metainfo.xml  com.lumineria.Launcher.yml  generated-sources.json  org.astral.lumineria.Launcher.yml  org.lumineria.Launcher.yml
.github/workflows/: release.yml
src/: README.md  index.html  profiles.json
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  discord.rs  downloader.rs  instance.rs  ipc.rs  java.rs  lib.rs  main.rs  net.rs  presence.rs  settings.rs
src-tauri/src/auth/: microsoft.rs  mod.rs  models.rs  offline.rs  session.rs
src-tauri/src/discord/: mod.rs
src-tauri/src/downloader/: file.rs  jar.rs  mod.rs  profile.rs
src-tauri/src/games/: minecraft.rs
src-tauri/src/games/minecraft/: arguments.rs  assets.rs  classpath.rs  fabric.rs  launcher.rs  mod.rs  vanilla.rs  version.rs
src-tauri/src/instance/: mod.rs  models.rs  mods.rs  packwiz.rs  profiles.rs  reset.rs  status.rs
src-tauri/src/ipc/: mod.rs
src/css/: components.css  layout.css  variables.css
src/css/base/: reset.css  variables.css
src/css/components/: buttons.css  cards.css  console.css  forms.css  hero.css  instance-detail.css  loader-picker.css  modals.css  mods.css  panel.css  sidebar.css
src/css/layout/: layout.css
src/js/: auth.js  console.js  creator.js  dialogs.js  explore.js  instanceDetail.js  launcher.js  main.js  mods.js  resourcePacks.js  state.js  ui.js
src/js/core/: main.js  state.js  tauri.js
src/js/features/auth/: auth.js
src/js/features/explore/: explore.js
src/js/features/instances/: creator.js  instanceDetail.js  launcher.js  mods.js  (+1 more)
src/js/ui/: console.js  dialogs.js  ui.js
